# bottlerocket-bootstrap-associate-eip

./: .dockerignore  .gitignore  BUILDING.md  Cargo.toml  Dockerfile  Dockerfile.debug  README.md
src/: main.rs  types.rs
tests/: integration_test.rs
