[package]
name = "bottlerocket-bootstrap-associate-eip"
version = "0.2.2"
edition = "2024"

[dependencies]
aws-config = "1.6.0"
aws-credential-types = "1.2.2"
aws-sdk-ec2 = "1.118.0"
env_logger = "0.11.7"
http = "1.3.1"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros"] }

[dev-dependencies]
chrono = "0.4.40"
const-str = "0.6.2"
futures = "0.3.31"
hyper = { version = "1.6.0", features = ["server"] }
serde_urlencoded = "0.7.1"
tempfile = "3.19.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[profile.release]
strip = true

[profile.release-build]
inherits = "release"
opt-level = "z"
strip = true
debug = false
lto = true
codegen-units = 1

[profile.debug-build]
inherits = "release"
opt-level = "z"
strip = false
debug = true
lto = true
codegen-units = 1
