[package]
name = "bottlerocket-bootstrap-associate-eip"
version = "0.2.4"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.6", default-features = false }
aws-sdk-ec2 = "1.166.0"
env_logger = "0.11.8"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros"] }

[dev-dependencies]
chrono = "0.4.41"
const-str = "0.7.0"
hyper = { version = "1.7.0", features = ["server"] }
serde_urlencoded = "0.7.1"
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[profile.release]
strip = true

[profile.release-build]
inherits = "release"
opt-level = "z"
strip = true
debug = false
lto = true
codegen-units = 1

[profile.debug-build]
inherits = "release"
opt-level = "z"
strip = false
debug = true
lto = true
codegen-units = 1
